@@ -8,7 +8,7 @@
 <configuremap>
   <configure name="NAME" value="ImageMagick"/>
   <configure name="LIB_VERSION" value="0x655"/>
-  <configure name="LIB_VERSION_NUMBER" value="6,5,5,9"/>
+  <configure name="LIB_VERSION_NUMBER" value="6,5,5,10"/>
   <configure name="RELEASE_DATE" value="2009-09-11"/>
   <configure name="CONFIGURE" value="./configure "/>
   <configure name="PREFIX" value="/usr/local"/>
